--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ncp": "~1.0.1",
     "orchestrator": "~0.3.7",
     "phantomjs": "^1.9.19",
+    "phantomjs-polyfill": "0.0.2",
     "plist": "1.1.0",
     "ripple-emulator": "~0.9.24",
     "sinon": "^1.17.2",
@@ -65,8 +66,8 @@
     "node": ">=0.10.0"
   },
   "cordovaPlugins": [
-		"org.apache.cordova.device",
-		"org.apache.cordova.console",
-		"com.ionic.keyboard"
+    "org.apache.cordova.device",
+    "org.apache.cordova.console",
+    "com.ionic.keyboard"
   ]
 }
