--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "cordovaPlugins": [
     "org.apache.cordova.device",
     "org.apache.cordova.console",
-    "com.ionic.keyboard"
+    "com.ionic.keyboard",
+    "cordova-plugin-geolocation"
   ]
 }
