--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
     "angular-scenario": "1.5.3"
   },
   "resolutions": {
-    "angular": "1.5.3"
+    "angular": "1.5.3",
+    "angular-animate": "1.5.3",
+    "angular-sanitize": "1.5.3"
   }
 }
