--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "win-spawn": "^2.0.0"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=0.12.0 <=5.0.0"
   },
   "cordovaPlugins": [
     "org.apache.cordova.device",
