--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "ionic": "v1.3.1",
     "ngCordova": "~0.1.26-alpha",
-    "ng-token-auth": "^0.0.29"
+    "ng-token-auth": "^0.0.29",
+    "angular-translate": "^2.11.1"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
