--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "ionic": "v1.3.1",
     "ngCordova": "~0.1.26-alpha",
     "ng-token-auth": "^0.0.29",
-    "angular-translate": "^2.11.1"
+    "angular-translate": "^2.11.1",
+    "airbrake-js-client": "^0.5.9"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
