--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "ngCordova": "~0.1.26-alpha",
     "ng-token-auth": "^0.0.29",
     "angular-translate": "^2.11.1",
-    "airbrake-js-client": "^0.5.9"
+    "airbrake-js-client": "^0.5.9",
+    "angular-slick-carousel": "^3.1.7"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
