--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "ng-token-auth": "^0.0.29",
     "angular-translate": "^2.11.1",
     "airbrake-js-client": "^0.5.9",
-    "angular-slick-carousel": "^3.1.7"
+    "angular-slick-carousel": "^3.1.7",
+    "ng-file-upload": "^12.2.5"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
