--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "karma-chai": "~0.1.0",
     "karma-chrome-launcher": "~0.1.7",
     "karma-coverage": "~0.2.7",
+    "karma-junit-reporter": "^1.1.0",
     "karma-mocha": "~0.1.10",
     "karma-ng-html2js-preprocessor": "^0.2.1",
     "karma-phantomjs-launcher": "~0.1.4",
