--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "postinstall": "bash ./post_install.sh",
-    "test": "grunt test:ci"
+    "test": "grunt test:ci && CODECLIMATE_REPO_TOKEN=$CodeClimateToken ./node_modules/.bin/codeclimate-test-reporter < coverage/report-lcovonly.txt"
   },
   "dependencies": {
     "bower": "^1.6.5",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
+    "codeclimate-test-reporter": "^0.3.3",
     "cordova": "~4.2.0",
     "elementtree": "0.1.6",
     "glob": "~4.3.5",
