--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-translate": "^2.11.1",
     "airbrake-js-client": "^0.5.9",
     "angular-slick-carousel": "^3.1.7",
-    "ng-file-upload": "^12.2.5"
+    "ng-file-upload": "^12.2.5",
+    "ion-datetime-picker": "^0.4.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
