--- a/.jshintrc
+++ b/.jshintrc
@@ -23,6 +23,7 @@
     "cordova": false,
     "StatusBar": false,
     "google": false,
-    "airbrakeJs": false
+    "airbrakeJs": false,
+    "moment": false
   }
 }
