--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "airbrake-js-client": "^0.5.9",
     "angular-slick-carousel": "^3.1.7",
     "ng-file-upload": "^12.2.5",
-    "ion-datetime-picker": "^0.4.0"
+    "ion-datetime-picker": "^0.4.0",
+    "moment": "^2.15.1"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
