--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,9 @@
   "name": "portarre-frontend",
   "version": "0.0.1",
   "dependencies": {
+    "angular": "1.5.3",
+    "angular-animate": "1.5.3",
+    "angular-sanitize": "1.5.3",
     "ionic": "v1.3.1",
     "ngCordova": "~0.1.26-alpha",
     "ng-token-auth": "^0.0.29",
@@ -9,16 +12,12 @@
     "airbrake-js-client": "^0.5.9",
     "angular-slick-carousel": "^3.1.7",
     "ng-file-upload": "^12.2.5",
-    "ion-datetime-picker": "^0.4.0",
-    "moment": "^2.15.1"
+    "ion-datetime-picker": "0.4.1",
+    "moment": "^2.15.1",
+    "angular-messages": "1.5.3"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
     "angular-scenario": "1.5.3"
-  },
-  "resolutions": {
-    "angular": "1.5.3",
-    "angular-animate": "1.5.3",
-    "angular-sanitize": "1.5.3"
   }
 }
