mostrar StatusBar en pantalla de intro
y deshacerse del viejo plugin de córdova com.ionic.keyboard

--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
   "cordovaPlugins": [
     "org.apache.cordova.device",
     "org.apache.cordova.console",
-    "com.ionic.keyboard",
     "cordova-plugin-geolocation",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-statusbar"
   ]
 }
