issue782:adding cordova-plugin-whitelist and configuring the whitelist for app can access external content (#102)

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "org.apache.cordova.console",
     "cordova-plugin-geolocation",
     "ionic-plugin-keyboard",
-    "cordova-plugin-statusbar"
+    "cordova-plugin-statusbar",
+    "cordova-plugin-whitelist"
   ]
 }
