--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "grunt-usemin": "~3.0.0",
     "grunt-wiredep": "^2.0.0",
     "http-backend-proxy": "^1.4.3",
-    "ionic": "^1.3.7",
+    "ionic": "~1.7.16",
     "jshint-stylish": "~1.0.0",
     "karma": "~0.12.31",
     "karma-chai": "~0.1.0",
