--- a/config/demo.moviggo.noggalito.com.conf
+++ b/config/demo.moviggo.noggalito.com.conf
@@ -5,11 +5,6 @@ server {
   listen 80;
 
   location / {
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://127.0.0.1:2789;
-    proxy_redirect off;
+    root /home/macool/demo-porttare-frontend/current/www;
   }
 }
