--- a/config/demo.moviggo.noggalito.com.conf
+++ b/config/demo.moviggo.noggalito.com.conf
@@ -3,6 +3,10 @@ server {
               www.demo.moviggo.noggalito.com;
 
   listen 80;
+  listen 443;
+
+  ssl_certificate /home/macool/demo-porttare-frontend/ssl/nginx.crt;
+  ssl_certificate_key /home/macool/demo-porttare-frontend/ssl/nginx.key;
 
   location / {
     proxy_set_header X-Real-IP $remote_addr;
