--- a/config/demo.moviggo.noggalito.com.conf
+++ b/config/demo.moviggo.noggalito.com.conf
@@ -1,18 +1,9 @@
 server {
+  server_name demo.moviggo.noggalito.com
+              www.demo.moviggo.noggalito.com;
+
   listen 80;
-  listen [::]:80;
-
-  server_name demo.moviggo.noggalito.com
-              www.demo.moviggo.noggalito.com;
-
-  return 301 https://$server_name$request_uri;
-}
-
-server {
-  listen 443 ssl;
-
-  server_name demo.moviggo.noggalito.com
-              www.demo.moviggo.noggalito.com;
+  listen 443;
 
   ssl_certificate /home/macool/demo-porttare-frontend/ssl/nginx.crt;
   ssl_certificate_key /home/macool/demo-porttare-frontend/ssl/nginx.key;
