--- a/config/demo.moviggo.noggalito.com.conf
+++ b/config/demo.moviggo.noggalito.com.conf
@@ -1,9 +1,18 @@
 server {
+  listen 80;
+  listen [::]:80;
+
   server_name demo.moviggo.noggalito.com
               www.demo.moviggo.noggalito.com;
 
-  listen 80;
-  listen 443;
+  return 301 https://$server_name$request_uri;
+}
+
+server {
+  listen 443 ssl;
+
+  server_name demo.moviggo.noggalito.com
+              www.demo.moviggo.noggalito.com;
 
   ssl_certificate /home/macool/demo-porttare-frontend/ssl/nginx.crt;
   ssl_certificate_key /home/macool/demo-porttare-frontend/ssl/nginx.key;
@@ -13,7 +22,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://127.0.0.1:2789;
+    proxy_pass https://127.0.0.1:2789;
     proxy_redirect off;
   }
 }
