--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "cordova-plugin-geolocation",
     "ionic-plugin-keyboard",
     "cordova-plugin-statusbar",
-    "cordova-plugin-whitelist"
+    "cordova-plugin-whitelist",
+    "cordova-plugin-whitelist@~1.3.0"
   ]
 }
