--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "moment": "^2.15.1",
     "angular-messages": "1.5.3",
     "ng-file-upload": "noggalito/ng-file-upload#12.2.13.1-noggalito",
-    "angular-elastic": "^2.5.1"
+    "angular-elastic": "^2.5.1",
+    "selectize": "^0.12.4"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
