Fix native oauth (#130)
* address native login with FB

wip

* add native login service to authenticate when running in native mode

* manually set headers

* connect to ng-token-auth to handle the session

* do not reauth already authorised FB users

* conveniently rename services

* pegando con mocos

* building native android FB auth

--- a/package.json
+++ b/package.json
@@ -76,6 +76,11 @@
     "ionic-plugin-keyboard",
     "cordova-plugin-statusbar",
     "cordova-plugin-whitelist",
-    "cordova-plugin-whitelist@~1.3.0"
+    "cordova-plugin-whitelist@~1.3.0",
+    "https://github.com/Wizcorp/phonegap-facebook-plugin.git"
+  ],
+  "cordovaPlatforms": [
+    "android",
+    "ios"
   ]
 }
