--- a/bower.json
+++ b/bower.json
@@ -11,13 +11,16 @@
     "angular-translate": "^2.11.1",
     "airbrake-js-client": "^0.5.9",
     "angular-slick-carousel": "^3.1.7",
-    "ng-file-upload": "^12.2.5",
     "ion-datetime-picker": "0.4.1",
     "moment": "^2.15.1",
-    "angular-messages": "1.5.3"
+    "angular-messages": "1.5.3",
+    "ng-file-upload": "noggalito/ng-file-upload#12.2.13.1-noggalito"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
     "angular-scenario": "1.5.3"
+  },
+  "resolutions": {
+    "ng-file-upload": "12.2.13.1-noggalito"
   }
 }
