--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "cordova-plugin-statusbar",
     "cordova-plugin-whitelist",
     "cordova-plugin-whitelist@~1.3.0",
-    "https://github.com/Wizcorp/phonegap-facebook-plugin.git"
+    "https://github.com/Wizcorp/phonegap-facebook-plugin.git",
+    "cordova-plugin-camera"
   ],
   "cordovaPlatforms": [
     "android",
