--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "ion-datetime-picker": "0.4.1",
     "moment": "^2.15.1",
     "angular-messages": "1.5.3",
-    "ng-file-upload": "noggalito/ng-file-upload#12.2.13.1-noggalito"
+    "ng-file-upload": "noggalito/ng-file-upload#12.2.13.1-noggalito",
+    "angular-elastic": "^2.5.1"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
