--- a/config/demo.moviggo.noggalito.com.conf
+++ b/config/demo.moviggo.noggalito.com.conf
@@ -3,7 +3,9 @@ server {
   listen [::]:80;
 
   server_name demo.moviggo.noggalito.com
-              www.demo.moviggo.noggalito.com;
+              www.demo.moviggo.noggalito.com
+              demo.moviggo.com
+              www.demo.moviggo.com;
 
   return 301 https://$server_name$request_uri;
 }
@@ -12,7 +14,9 @@ server {
   listen 443 ssl;
 
   server_name demo.moviggo.noggalito.com
-              www.demo.moviggo.noggalito.com;
+              www.demo.moviggo.noggalito.com
+              demo.moviggo.com
+              www.demo.moviggo.com;
 
   ssl_certificate /home/macool/demo-porttare-frontend/ssl/nginx.crt;
   ssl_certificate_key /home/macool/demo-porttare-frontend/ssl/nginx.key;
