--- a/config/demo.moviggo.noggalito.com.conf
+++ b/config/demo.moviggo.noggalito.com.conf
@@ -2,9 +2,7 @@ server {
   listen 80;
   listen [::]:80;
 
-  server_name demo.moviggo.noggalito.com
-              www.demo.moviggo.noggalito.com
-              demo.moviggo.com
+  server_name demo.moviggo.com
               www.demo.moviggo.com;
 
   return 301 https://$server_name$request_uri;
@@ -13,9 +11,7 @@ server {
 server {
   listen 443 ssl;
 
-  server_name demo.moviggo.noggalito.com
-              www.demo.moviggo.noggalito.com
-              demo.moviggo.com
+  server_name demo.moviggo.com
               www.demo.moviggo.com;
 
   ssl_certificate /home/macool/demo-porttare-frontend/ssl/nginx.crt;
