--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bower": "^1.6.5",
+    "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "express-sslify": "^1.1.0",
     "grunt": "~0.4.5",
