--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "karma-junit-reporter": "^1.1.0",
     "karma-mocha": "~0.1.10",
     "karma-ng-html2js-preprocessor": "^0.2.1",
-    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-sinon": "^1.0.4",
     "load-grunt-tasks": "~3.1.0",
     "lodash": "~3.1.0",
@@ -59,8 +59,9 @@
     "mocha": "^2.3.4",
     "ncp": "~1.0.1",
     "orchestrator": "~0.3.7",
-    "phantomjs": "^1.9.19",
+    "phantomjs": "^2.1.7",
     "phantomjs-polyfill": "0.0.2",
+    "phantomjs-polyfill-find": "github:ptim/phantomjs-polyfill-find",
     "plist": "1.1.0",
     "ripple-emulator": "~0.9.24",
     "sinon": "^1.17.2",
