--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-messages": "1.5.3",
     "ng-file-upload": "noggalito/ng-file-upload#12.2.13.1-noggalito",
     "angular-elastic": "^2.5.1",
-    "selectize": "^0.12.4"
+    "selectize": "^0.12.4",
+    "array-find": "^1.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
