--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
     "angular-sanitize": "1.5.3",
     "ionic": "noggalito/ionic#1.3.2-nogal",
     "ngCordova": "~0.1.26-alpha",
-    "ng-token-auth": "^0.0.29",
+    "ng-token-auth": "noggalito/ng-token-auth#0.0.29-noggalito",
     "angular-translate": "^2.11.1",
     "airbrake-js-client": "^0.5.9",
     "angular-slick-carousel": "^3.1.7",
