--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "ng-file-upload": "noggalito/ng-file-upload#12.2.13.1-noggalito",
     "angular-elastic": "^2.5.1",
     "selectize": "^0.12.4",
-    "array-find": "^1.0.1"
+    "array-find": "^1.0.1",
+    "mdn-array.prototype.includes": "^1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
