--- a/bower.json
+++ b/bower.json
@@ -18,13 +18,15 @@
     "angular-elastic": "^2.5.1",
     "selectize": "^0.12.4",
     "array-find": "^1.0.1",
-    "mdn-array.prototype.includes": "^1.0.0"
+    "mdn-array.prototype.includes": "^1.0.0",
+    "angular-touch": "^1.6.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
     "angular-scenario": "1.5.3"
   },
   "resolutions": {
-    "ng-file-upload": "12.2.13.1-noggalito"
+    "ng-file-upload": "12.2.13.1-noggalito",
+    "angular": "1.5.3"
   }
 }
