no need to bind

--- a/.jshintrc
+++ b/.jshintrc
@@ -25,6 +25,7 @@
     "google": false,
     "airbrakeJs": false,
     "moment": false,
-    "File": false
+    "File": false,
+    "Pusher": false
   }
 }
