--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "selectize": "^0.12.4",
     "array-find": "^1.0.1",
     "mdn-array.prototype.includes": "^1.0.0",
-    "angular-touch": "^1.6.1"
+    "angular-touch": "^1.6.1",
+    "array.some": "*"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
