--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "array-find": "^1.0.1",
     "mdn-array.prototype.includes": "^1.0.0",
     "angular-touch": "^1.6.1",
-    "array.some": "*"
+    "array.some": "*",
+    "array polyfill": "array-polyfill#^0.2.1"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
