--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-copy": "~0.7.0",
     "grunt-contrib-jade": "^0.15.0",
     "grunt-ng-constant": "^1.0.0",
+    "polyfill-array": "^0.1.1",
     "time-grunt": "~1.0.0"
   },
   "devDependencies": {
@@ -60,8 +61,6 @@
     "ncp": "~1.0.1",
     "orchestrator": "~0.3.7",
     "phantomjs": "^2.1.7",
-    "phantomjs-polyfill": "0.0.2",
-    "phantomjs-polyfill-find": "github:ptim/phantomjs-polyfill-find",
     "plist": "1.1.0",
     "ripple-emulator": "~0.9.24",
     "sinon": "^1.17.2",
