--- a/bower.json
+++ b/bower.json
@@ -20,14 +20,14 @@
     "array-find": "^1.0.1",
     "mdn-array.prototype.includes": "^1.0.0",
     "angular-touch": "^1.6.1",
-    "array-polyfill": "macool/array-polyfill#^0.2.1"
+    "array-polyfill": "macool/array-polyfill#^0.2.1",
+    "angular-input-match": "angular-validation-match#1.3"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
     "angular-scenario": "1.5.3"
   },
   "resolutions": {
-    "ng-file-upload": "12.2.13.1-noggalito",
     "angular": "1.5.3"
   },
   "overrides": {
