--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "mdn-array.prototype.includes": "^1.0.0",
     "angular-touch": "^1.6.1",
     "array-polyfill": "macool/array-polyfill#^0.2.1",
-    "angular-input-match": "angular-validation-match#1.3"
+    "angular-input-match": "angular-validation-match#1.3",
+    "number-is-integer": "*"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
