--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "angular-touch": "^1.6.1",
     "array-polyfill": "macool/array-polyfill#^0.2.1",
     "angular-input-match": "angular-validation-match#1.3",
-    "number-is-integer": "*"
+    "number-is-integer": "*",
+    "Geolib": "geolib#^2.0.22"
   },
   "devDependencies": {
     "angular-mocks": "1.5.3",
