--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "cordova-plugin-statusbar@~2.2.0",
     "cordova-plugin-whitelist@~1.3.0",
     "cordova-plugin-camera@~2.3.0",
+    "phonegap-plugin-push@1.8.0",
     "https://github.com/jeduan/cordova-plugin-facebook4.git#d7deb658085c1f8e0f002992ec6ace581729ad58"
   ],
   "cordovaPlatforms": [
