let’s test some caching :bomb:

--- a/config/demo.moviggo.com.conf
+++ b/config/demo.moviggo.com.conf
@@ -28,15 +28,31 @@ server {
   charset utf-8;
   root /home/demo-porttare/demo-porttare-frontend/current/www;
 
-  location ~ ^/(scripts.*js|styles|images) {
-    gzip_static on;
-    expires 1y;
-    add_header Cache-Control public;
-
-    break;
+  # cache.appcache, your document html and data
+  location ~* \.(?:manifest|appcache|html?|xml|json)$ {
+    expires -1;
   }
 
-  location / {
-    try_files $uri /index.html;
+  # Media: images, icons, video, audio, HTC
+  location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
+    expires 1M;
+    gzip_static on;
+    add_header Cache-Control "public";
+  }
+
+  # CSS and Javascript
+  location ~* \.(?:css|js)$ {
+    expires 1M;
+    access_log off;
+    gzip_static on;
+    add_header Cache-Control "public";
+  }
+
+  # WebFonts
+  location ~* \.(?:ttf|ttc|otf|eot|woff|woff2)$ {
+    expires 1y;
+    access_log off;
+    gzip_static on;
+    add_header Cache-Control "public";
   }
 }
