--- a/config/demo.moviggo.com.conf
+++ b/config/demo.moviggo.com.conf
@@ -33,6 +33,16 @@ server {
     expires -1;
   }
 
+  # cache templates
+  location ^~ /templates {
+    # I think ideally we'll bump this
+    # once we are done with the building
+    expires 24h;
+    access_log off;
+    gzip_static on;
+    add_header Cache-Control "public";
+  }
+
   # Media: images, icons, video, audio, HTC
   location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
     expires 1M;
@@ -42,7 +52,9 @@ server {
 
   # CSS and Javascript
   location ~* \.(?:css|js)$ {
-    expires 1M;
+    # I think ideally we'll bump this
+    # once we are done with the building
+    expires 24h;
     access_log off;
     gzip_static on;
     add_header Cache-Control "public";
