--- a/config/demo.cuxibamba.com.conf
+++ b/config/demo.cuxibamba.com.conf
@@ -2,11 +2,11 @@ server {
   listen 80;
   listen [::]:80;
 
-  server_name demo.moviggo.com
-              www.demo.moviggo.com;
+  server_name demo.cuxibamba.com
+              www.demo.cuxibamba.com;
 
-  error_log /var/log/nginx/moviggo.error.log;
-  access_log /var/log/nginx/moviggo.access.log;
+  error_log /var/log/nginx/cx-demo-porttare.error.log;
+  access_log /var/log/nginx/cx-demo-porttare.access.log;
 
   location / {
     rewrite ^ https://$host$request_uri? permanent;
@@ -16,17 +16,17 @@ server {
 server {
   listen 443 ssl;
 
-  server_name demo.moviggo.com
-              www.demo.moviggo.com;
+  server_name demo.cuxibamba.com
+              www.demo.cuxibamba.com;
 
-  error_log /var/log/nginx/moviggo.error.log;
-  access_log /var/log/nginx/moviggo.access.log;
+  error_log /var/log/nginx/cx-demo-porttare.error.log;
+  access_log /var/log/nginx/cx-demo-porttare.access.log;
 
-  ssl_certificate /home/demo-porttare/demo-porttare-frontend/ssl/nginx.crt;
-  ssl_certificate_key /home/demo-porttare/demo-porttare-frontend/ssl/nginx.key;
+  ssl_certificate /home/cx-demo-porttare/cx-demo-porttare-frontend/ssl/nginx.crt;
+  ssl_certificate_key /home/cx-demo-porttare/cx-demo-porttare-frontend/ssl/nginx.key;
 
   charset utf-8;
-  root /home/demo-porttare/demo-porttare-frontend/current/www;
+  root /home/cx-demo-porttare/cx-demo-porttare-frontend/current/www;
 
   # cache.appcache, your document html and data
   location ~* \.(?:manifest|appcache|html?|xml|json)$ {
