--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "selectize": "^0.12.4",
     "array-find": "^1.0.1",
     "mdn-array.prototype.includes": "^1.0.0",
-    "angular-touch": "^1.6.1",
+    "angular-touch": "1.6.1",
     "array-polyfill": "macool/array-polyfill#^0.2.1",
     "angular-input-match": "angular-validation-match#1.3",
     "number-is-integer": "*",
