--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-contrib-jshint": "~0.11.0",
     "grunt-contrib-uglify": "~0.7.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-jade-ng-template-cache": "0.0.5",
     "grunt-karma": "~0.10.1",
     "grunt-newer": "~1.1.0",
     "grunt-ng-annotate": "~0.9.2",
