update nginx site

--- a/config/sites/porttare.shiriculapo.com.conf
+++ b/config/sites/porttare.shiriculapo.com.conf
@@ -1,8 +1,8 @@
 server {
   listen 80;
 
-  server porttare.shiriculapo.com
-         www.porttare.shiriculapo.com;
+  server_name porttare.shiriculapo.com
+              www.porttare.shiriculapo.com;
 
   return 301 https://$server_name$request_uri;
 }
