--- a/config/sites/porttare.shiriculapo.com.conf
+++ b/config/sites/porttare.shiriculapo.com.conf
@@ -13,8 +13,8 @@ server {
   server_name porttare.shiriculapo.com
               www.porttare.shiriculapo.com;
 
-  #ssl_certificate /etc/letsencrypt/live/porttare.shiriculapo.com/fullchain.pem;
-  #ssl_certificate_key /etc/letsencrypt/live/porttare.shiriculapo.com/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/porttare.shiriculapo.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/porttare.shiriculapo.com/privkey.pem;
 
   # secure ssl
   # from https://cipherli.st/
