just adding not sw

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "grunt-ng-constant": "^1.0.0",
         "ionic-plugin-keyboard": "~2.2.1",
         "phonegap-plugin-push": "1.8.0",
-        "time-grunt": "~1.0.0"
+        "time-grunt": "~1.0.0",
+        "grunt-jade-ng-template-cache": "0.0.5"
     },
     "devDependencies": {
         "chai": "^3.4.1",
