--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "porttare-frontend",
   "version": "0.0.1",
   "dependencies": {
+    "jquery": "~3.2.1",
     "angular": "1.5.3",
     "angular-animate": "1.5.3",
     "angular-sanitize": "1.5.3",
@@ -38,6 +39,9 @@
         "min/moment.min.js",
         "locale/es.js"
       ]
+    },
+    "number.isinteger": {
+      "main": ["index.js"]
     }
   }
 }
