Using packages instead of node

--- a/package.json
+++ b/package.json
@@ -1,118 +1,144 @@
 {
-    "name": "porttare-frontend",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "postinstall": "bash ./post_install.sh",
-        "test": "grunt test:ci && CODECLIMATE_REPO_TOKEN=$CodeClimateToken ./node_modules/.bin/codeclimate-test-reporter < coverage/report-lcovonly.txt"
-    },
-    "dependencies": {
-        "bower": "^1.8.2",
-        "cordova-android": "~4.1.1",
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-camera": "~2.3.0",
-        "cordova-plugin-facebook4": "git+https://github.com/jeduan/cordova-plugin-facebook4.git#0f2b695b3b8e7692c749a11cc85b09be5d14ffab",
-        "cordova-plugin-geolocation": "~2.4.0",
-        "cordova-plugin-statusbar": "~2.2.0",
-        "cordova-plugin-whitelist": "~1.3.0",
-        "dotenv": "~4.0.0",
-        "express": "^4.16.2",
-        "express-sslify": "~1.2.0",
-        "grunt": "~1.0.1",
-        "grunt-cli": "~1.2.0",
-        "grunt-concurrent": "~2.3.1",
-        "grunt-contrib-compass": "~1.1.1",
-        "grunt-contrib-copy": "~1.0.0",
-        "grunt-contrib-jade": "~1.0.0",
-        "grunt-ng-constant": "~2.0.1",
-        "ionic-plugin-keyboard": "~2.2.1",
-        "phonegap-plugin-push": "1.8.0",
-        "time-grunt": "~1.4.0",
-        "grunt-jade-ng-template-cache": "0.0.5"
-    },
-    "devDependencies": {
-        "chai": "~4.1.2",
-        "chai-as-promised": "~7.1.1",
-        "codeclimate-test-reporter": "~0.5.0",
-        "cordova": "~4.2.0",
-        "elementtree": "~0.1.7",
-        "glob": "~7.1.2",
-        "grunt-autoprefixer": "~3.0.4",
-        "grunt-contrib-clean": "~1.1.0",
-        "grunt-contrib-concat": "~1.0.1",
-        "grunt-contrib-connect": "~1.0.2",
-        "grunt-contrib-cssmin": "~2.2.1",
-        "grunt-contrib-htmlmin": "~2.4.0",
-        "grunt-contrib-jshint": "~1.1.0",
-        "grunt-contrib-uglify": "~3.2.1",
-        "grunt-contrib-watch": "~1.0.0",
-        "grunt-karma": "~2.0.0",
-        "grunt-newer": "~1.3.0",
-        "grunt-ng-annotate": "~3.0.0",
-        "grunt-usemin": "~3.1.1",
-        "grunt-wiredep": "~3.0.1",
-        "http-backend-proxy": "~1.4.3",
-        "ionic": "~3.19.0",
-        "jshint-stylish": "~2.2.1",
-        "karma": "~1.7.1",
-        "karma-chai": "~0.1.0",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage": "~1.1.1",
-        "karma-junit-reporter": "~1.2.0",
-        "karma-mocha": "~1.3.0",
-        "karma-ng-html2js-preprocessor": "~1.0.0",
-        "karma-phantomjs-launcher": "~1.0.4",
-        "karma-sinon": "~1.0.5",
-        "load-grunt-tasks": "~3.5.2",
-        "lodash": "~4.17.4",
-        "mkdirp": "~0.5.1",
-        "mocha": "~4.0.1",
-        "ncp": "~2.0.0",
-        "orchestrator": "~0.3.8",
-        "phantomjs-prebuilt": "~2.1.16",
-        "plist": "~2.1.0",
-        "ripple-emulator": "~0.9.36",
-        "sinon": "~4.1.3",
-        "slack-node": "~0.1.8",
-        "win-spawn": "~2.0.0"
-    },
-    "engines": {
-        "node": ">=0.12.0 <=6.9.0"
-    },
-    "cordovaPlugins": [
-        "org.apache.cordova.device",
-        "org.apache.cordova.console",
-        "cordova-plugin-geolocation@~2.4.0",
-        "ionic-plugin-keyboard@~2.2.1",
-        "cordova-plugin-statusbar@~2.2.0",
-        "cordova-plugin-whitelist@~1.3.0",
-        "cordova-plugin-camera@~2.3.0",
-        "phonegap-plugin-push@1.8.0",
-        "cordova-plugin-facebook4@https://github.com/jeduan/cordova-plugin-facebook4.git#0f2b695b3b8e7692c749a11cc85b09be5d14ffab"
+  "name": "porttare-frontend",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "postinstall": "bash ./post_install.sh",
+    "test": "grunt test:ci && CODECLIMATE_REPO_TOKEN=$CodeClimateToken ./node_modules/.bin/codeclimate-test-reporter < coverage/report-lcovonly.txt"
+  },
+  "dependencies": {
+    "airbrake-js": "^1.0.0",
+    "angular": "^1.5.3",
+    "angular-animate": "^1.5.3",
+    "angular-elastic": "^2.5.1",
+    "angular-input-match": "0.0.3",
+    "angular-messages": "^1.5.3",
+    "angular-sanitize": "^1.5.3",
+    "angular-slick-carousel": "^3.1.7",
+    "angular-touch": "^1.6.1",
+    "angular-translate": "^2.11.1",
+    "angular-ui-router": "^0.4.3",
+    "array-find": "^1.0.0",
+    "bower": "^1.8.2",
+    "cordova-android": "~4.1.1",
+    "cordova-ios": "^4.4.0",
+    "cordova-plugin-camera": "~2.3.0",
+    "cordova-plugin-facebook4": "git+https://github.com/jeduan/cordova-plugin-facebook4.git#0f2b695b3b8e7692c749a11cc85b09be5d14ffab",
+    "cordova-plugin-geolocation": "~2.4.0",
+    "cordova-plugin-statusbar": "~2.2.0",
+    "cordova-plugin-whitelist": "~1.3.0",
+    "dotenv": "~4.0.0",
+    "express": "^4.16.2",
+    "express-sslify": "~1.2.0",
+    "geolib": "^2.0.24",
+    "grunt": "~1.0.1",
+    "grunt-cli": "~1.2.0",
+    "grunt-concurrent": "~2.3.1",
+    "grunt-contrib-compass": "~1.1.1",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-jade": "~1.0.0",
+    "grunt-jade-ng-template-cache": "0.0.5",
+    "grunt-ng-constant": "~2.0.1",
+    "ion-datetime-picker": "^0.5.2",
+    "ionic-native": "^2.9.0",
+    "ionic-plugin-keyboard": "~2.2.1",
+    "ionic-sdk": "github:noggalito/ionic#1.3.2-nogal",
+    "jquery": "^3.2.1",
+    "moment": "^2.20.1",
+    "ng-file-upload": "github:noggalito/ng-file-upload",
+    "ng-token-auth": "github:noggalito/ng-token-auth#inject-localstorage",
+    "number.isinteger": "^0.1.0",
+    "phonegap-plugin-push": "1.8.0",
+    "polyfill-array": "^0.1.1",
+    "selectize": "^0.12.4",
+    "slick-carousel": "^1.8.1",
+    "time-grunt": "~1.4.0"
+  },
+  "devDependencies": {
+    "chai": "~4.1.2",
+    "chai-as-promised": "~7.1.1",
+    "codeclimate-test-reporter": "~0.5.0",
+    "copy-webpack-plugin": "^4.3.0",
+    "cordova": "~4.2.0",
+    "elementtree": "~0.1.7",
+    "glob": "~7.1.2",
+    "grunt-autoprefixer": "~3.0.4",
+    "grunt-contrib-clean": "~1.1.0",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-connect": "~1.0.2",
+    "grunt-contrib-cssmin": "~2.2.1",
+    "grunt-contrib-htmlmin": "~2.4.0",
+    "grunt-contrib-jshint": "~1.1.0",
+    "grunt-contrib-uglify": "~3.2.1",
+    "grunt-contrib-watch": "~1.0.0",
+    "grunt-karma": "~2.0.0",
+    "grunt-newer": "~1.3.0",
+    "grunt-ng-annotate": "~3.0.0",
+    "grunt-usemin": "~3.1.1",
+    "grunt-wiredep": "~3.0.1",
+    "http-backend-proxy": "~1.4.3",
+    "ionic": "~3.19.0",
+    "jshint-stylish": "~2.2.1",
+    "karma": "~1.7.1",
+    "karma-chai": "~0.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage": "~1.1.1",
+    "karma-junit-reporter": "~1.2.0",
+    "karma-mocha": "~1.3.0",
+    "karma-ng-html2js-preprocessor": "~1.0.0",
+    "karma-phantomjs-launcher": "~1.0.4",
+    "karma-sinon": "~1.0.5",
+    "load-grunt-tasks": "~3.5.2",
+    "lodash": "~4.17.4",
+    "mkdirp": "~0.5.1",
+    "mocha": "~4.0.1",
+    "ncp": "~2.0.0",
+    "orchestrator": "~0.3.8",
+    "phantomjs-prebuilt": "~2.1.16",
+    "plist": "~2.1.0",
+    "ripple-emulator": "~0.9.36",
+    "sinon": "~4.1.3",
+    "slack-node": "~0.1.8",
+    "webpack": "^3.10.0",
+    "win-spawn": "~2.0.0"
+  },
+  "engines": {
+    "node": ">=0.12.0 <=6.9.0"
+  },
+  "cordovaPlugins": [
+    "org.apache.cordova.device",
+    "org.apache.cordova.console",
+    "cordova-plugin-geolocation@~2.4.0",
+    "ionic-plugin-keyboard@~2.2.1",
+    "cordova-plugin-statusbar@~2.2.0",
+    "cordova-plugin-whitelist@~1.3.0",
+    "cordova-plugin-camera@~2.3.0",
+    "phonegap-plugin-push@1.8.0",
+    "cordova-plugin-facebook4@https://github.com/jeduan/cordova-plugin-facebook4.git#0f2b695b3b8e7692c749a11cc85b09be5d14ffab"
+  ],
+  "cordovaPlatforms": [
+    "android",
+    "ios"
+  ],
+  "cordova": {
+    "platforms": [
+      "android",
+      "ios"
     ],
-    "cordovaPlatforms": [
-        "android",
-        "ios"
-    ],
-    "cordova": {
-        "platforms": [
-            "android",
-            "ios"
-        ],
-        "plugins": {
-            "cordova-plugin-camera": {
-                "CAMERA_USAGE_DESCRIPTION": " ",
-                "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
-            },
-            "cordova-plugin-facebook4": {
-                "APP_ID": "422650018122547",
-                "APP_NAME": "demo-moviggo"
-            },
-            "cordova-plugin-geolocation": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {},
-            "phonegap-plugin-push": {}
-        }
+    "plugins": {
+      "cordova-plugin-camera": {
+        "CAMERA_USAGE_DESCRIPTION": " ",
+        "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
+      },
+      "cordova-plugin-facebook4": {
+        "APP_ID": "422650018122547",
+        "APP_NAME": "demo-moviggo"
+      },
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "phonegap-plugin-push": {}
     }
+  }
 }
